--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Reponsive portfolio website",
   "main": "index.js",
-  "homepage": "https://tienle-webmaster.com",
+  "homepage": "https://tienlewebmaster.github.io/mordern_portfolio",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy":"gh-pages -d dist"
